--- a/index.html
+++ b/index.html
@@ -4,15 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Havuçlu Cevizli Tarçınlı Kek</title>
+    <style>
+        body {
+            font-size: larger;
+            background-color: rgb(228, 226, 225);
+        }
+
+      </style>
 </head>
-<body>
-
-
-
-
-
-    <br>
+<body >
+    <header>
+        <h1>Havuçlu Cevizli Tarçınlı Kek</h1>
+        <img src="img/indir.jpeg" alt="Havuçlu Cevizli Tarçınlı Kek">
+      </header>       
+      <main>
+        <h3><em>6-8 Kişilik</em>  <em>20dk Hazırlık</em> <em>50dk Pişirme</em></h3>
+        <h2>Tarif İçin Malzemeler</h2>
+            <ul>
+                <li>3 yumurta</li>
+                <li>1 su bardağı şeker</li>
+                <li>Yarım su bardağı sıvı yağ</li>
+                <li>1 su bardağı süt</li>
+                <li>2,5 su bardağı un</li>
+                <li>1 paket vanilya</li>
+                <li>1 paket kabartma tozu</li>
+                <li>3 adet havuç (küçük boyutta)</li>
+                <li>1 su bardağı çekilmiş ceviz</li>
+                <li>1 yemek kaşığı tarçın (silme)</li>
+            </ul>
+        <h2>Havuçlu Cevizli Tarçınlı Kek Tarifi Nasıl Yapılır?</h2>
+            <ol>                
+                <li>Havuçlu cevizli kek için öncelikle havuçlar yıkanıp soyularak rendelenir. Suyunu sıkmayı unutmayın!</li>
+                <li>Derin bir kapta yumurta ve şeker mikser ile köpük köpük olana kadar iyice çırpılır.</li>
+                <li>Süt ve sıvı yağ eklenerek karıştırılır.</li>
+                <li>Un, kabartma tozu ve vanilya elenerek eklenir. Kıvamına göre un miktarını ayarlayın.</li>
+                <li>Malzemeler bir kez daha mikserle karıştırılıp içerisine havuç, ceviz ve tarçın ilave edilir.</li>
+                <li>Tahta bir kaşıkla son kez karıştırılır.</li>
+                <li>Kullanılacak kek kabı yağlandıktan sonra karışım kaba alınır.</li>
+                <li>170 derecede önceden ısıtılmış fırında yaklaşık 40 dakika pişirilir. İlk yarım saat fırının kapağını açmayınız ki kekiniz daha güzel kabarsın. :)</li>
+                <li>Fırından aldığımız keki kalıptan daha kolay çıkartmak için soğumaya bırakalım. Yeterince soğumadan çıkartmaya çalışırsanız kekiniz parçalanabilir. Soğuyan keki kalıptan rahatça çıkartalım.</li>                
+            </ol>
+                
+            <img  width='300' align ='right' src="img/indir (1).jpeg" alt="Afiyet olsun">
+        </main>
     <footer>
         <!-- REKLAMLAR -->
         <br>
